hot gadgets done

--- a/index.html
+++ b/index.html
@@ -184,6 +184,38 @@
         </div>
     </div>
 
+    <div class="container">
+        <h4 class="d-flex justify-content-center">Category</h4>
+        <hr class="underline">
+
+        <div class="d-flex justify-content-between align-items-center">
+            <div class="col-md-3">
+                <div class="cat">
+                    <img class="img-fluid" src="images/Categories/bag.png" alt="">
+                    <h5>Bag</h5>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="cat">
+                    <img class="img-fluid" src="images/Categories/perfume.png" alt="">
+                    <h5>Beauty</h5>
+                </div>
+                <br><br><br>
+                <div class="cat">
+                    <img class="img-fluid" src="images/Categories/shoe.png" alt="">
+                    <h5>Shoes</h5>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="">
+                    <img class="img-fluid" src="images/Categories/pale-order.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 
